...
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/add_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:tag="@string/title_hint"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:inputType="textFilter"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/add_task_description"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="top"
            android:hint="@string/description_hint"
            android:tag="@string/description_hint"
            android:inputType="textFilter|textMultiLine"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/makePhoto"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
...
