...
    <string name="no_tasks_active">You have no active TO-DOs!</string>
    <string name="no_tasks_completed">You have no completed TO-DOs!</string>
    <string name="no_tasks_add">Add a TO-DO item +</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share</string>
    <string name="share_to">Share to</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="statistics_show_dialog">Show dialog</string>
    <string name="statistics_enable_spinner">Switch ON to enable spinner</string>
    <string name="statistics_spinner_hint">List of TO-DOs</string>
    <string name="slider_three_days">3 days</string>

...

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_send_notifications">Send notification</string>
    <string name="pref_title_send_notifications_with_delay">Send notification with delay</string>
    <string name="pref_title_new_message_notifications">Enable notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
...
